fix: 見出し要素にword-wrapプロパティを追加

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,7 @@ html {
   margin-top: 1.5em;
   margin-bottom: 0.5em;
   color: white;
+  word-wrap: break-word;
 }
 
 .markdown h1 {
